change ins taging

--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "source": [
     "# Notebook Title\n",
+    "# Staging\n",
     "\n",
     "If in the beginning you want to link to certain chapters in the notebook, please use the following method as MyST has struggles referencing the right header:\n",
     "\n",
